trunk/Archive2/6b/00e2ce0d61c5e6/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:30:7: error: no unique final overrider for ‘virtual void A::Print()’ in ‘D’
 class D : public B, public C
       ^
